<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_tv_apptitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/app_name"
                android:textAppearance="@style/AppTheme.GameModeTitle" />

            <Button
                android:id="@+id/button_guess_country"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="startGameMode"
                android:text="@string/guess_country_label_text" />

            <Button
                android:id="@+id/button_guess_hints"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="startGameMode"
                android:text="@string/guess_hints_label_text" />

            <Button
                android:id="@+id/button_guess_flag"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="startGameMode"
                android:text="@string/guess_flag_label_text" />

            <Button
                android:id="@+id/button_advanced_level"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="startGameMode"
                android:text="@string/advanced_level_label_text" />

            <Switch
                android:id="@+id/switch_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/timer_switch_text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>