<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".guesscountry.GuessCountryActivity">

    <ProgressBar
        android:id="@+id/guesscountry_progressbar_timer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:progress="0"
        android:scaleY="8"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/guesscountry_text_timer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/initial_timer_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guesscountry_text_gamemodetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/guess_country_label_text"
                android:textAppearance="@style/AppTheme.GameModeTitle" />

            <ImageView
                android:id="@+id/guesscountry_image_flag"
                android:layout_width="250dp"
                android:layout_height="125dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/image_view_flag_content_description"
                android:src="@drawable/lk" />

            <Spinner
                android:id="@+id/guesscountry_spinner_countries"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/guesscountry_button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/guesscountry_text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guesscountry_text_correct_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>