<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".guesshints.GuessHintsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/guesshint_progressbar_timer"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:progress="0"
                    android:scaleY="8"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/guesshint_text_timer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/initial_timer_text"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/guesshint_text_gamemodetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/guess_hint"
                android:textAppearance="@style/AppTheme.GameModeTitle" />

            <ImageView
                android:id="@+id/guesshint_image_flag"
                android:layout_width="250dp"
                android:layout_height="125dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/image_view_flag_content_description"
                android:src="@drawable/lk" />

            <TextView
                android:id="@+id/guesshint_text_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/guesshint_text_guesslabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/guesshint_label_text" />

                <EditText
                    android:id="@+id/guesshint_edittext_guess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="1"
                    android:minEms="1" />

            </LinearLayout>

            <Button
                android:id="@+id/guesshint_button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/guesshint_text_guessesremaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/guesshint_text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guesshint_text_correctanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>